# BlocWeather

./: .gitignore  POST_REPORTS.md  README.md  SETUP.md  blocweather.yaml  check_etl.sql  pyproject.toml  run_etl.py  seed_test_data.sh
backend/: .env.example  .gitignore  Cargo.toml
backend/examples/: create_admin.rs
backend/migrations/: 001_initial.sql  002_area_suggestions.sql  003_climbing_types.sql  004_slugs.sql  005_report_comment.sql
backend/src/: main.rs  state.rs
backend/src/admin/: auth.rs  handlers.rs  middleware.rs  mod.rs
backend/src/calculations/: mod.rs  rock_temp.rs  saturation.rs
backend/src/jobs/: mod.rs  weather_sync.rs
backend/src/services/: mod.rs  weather_fetcher.rs
backend/validation_data/: dryness.json  generate_report.py  locations.json  rock_temp.json  validation_report.html
blocweather/: app.py  blocweather.yaml  schema.py  settings.py
blocweather/etl/: etl.py
blocweather/frontend/: index.html  package-lock.json  package.json  vite.config.ts  vue.config.js
blocweather/frontend/src/: App.vue
blocweather/frontend/src/components/: Chart.vue
config/: registered_points.json
deploy/: blocweather-backend.service  blocweather-frontend.service  config.sh.example  db-start.sh  deploy.sh  install-services.sh  nginx.conf  setup-server.sh
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: CountryCard.svelte  SearchBar.svelte  SpotMap.svelte  WeatherChart.svelte
frontend/src/lib/utils/: colors.ts  formatting.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/[country_slug]/: +page.svelte  +page.ts
frontend/src/routes/[country_slug]/[region_slug]/: +page.svelte  +page.ts
frontend/src/routes/admin/: +page.svelte  CountriesSection.svelte  RegionsSection.svelte  ReportsSection.svelte  SpotsSection.svelte  SuggestionsSection.svelte
(+16 files in other folders)
