[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "blocweather"
version = "0.0.1"
dependencies = [
    "polars",
    "pydantic",
    "pydantic-settings[yaml]",
    "openmeteo-requests",
    "requests-cache",
    "retry-requests",
    "numpy",
    "Flask",
]
requires-python = ">=3.12"
authors = [
  {name = "GibbonJojo", email = "gibbon.jojo95@gmail.com"},
]
description = "WebPage and API for Climbing Weather data"
license = "MIT"
#license-files = ["LICEN[CS]E.*"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
packages = ["blocweather"]